src/objects/click_Applicant__c.object
<CustomObject>
    <fields>
        <fullName>ACF1_Previous_Em_Start_Date0__c</fullName>
        <label>Previous Employer Start Date0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACF1_Previous_Em_Start_Date12__c</fullName>
        <label>Previous Employer Start Date12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACF1_Previous_Em_Start_Date24__c</fullName>
        <label>Previous Employer Start Date24</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACF1_Previous_Employer_Name0__c</fullName>
        <label>Who was your previous employer?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACF1_Previous_Employer_Name12__c</fullName>
        <label>Previous Employer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACF1_Previous_Employer_Name24__c</fullName>
        <label>Who was your previous employer?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACf1_Current_employer_Start_Date__c</fullName>
        <label>Current Employer start date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Credit_History__c</fullName>
        <label>Applicant Credit History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Phone__c</fullName>
        <label>Applicant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Setup</label>
        <referenceTo>Click_Community_Setup__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Record</label>
        <referenceTo>click_Applicant__c</referenceTo>
        <relationshipLabel>Applicants (Copy From)</relationshipLabel>
        <relationshipName>Applicants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Role__c</fullName>
        <label>Current Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendi_Application_uuid__c</fullName>
        <label>Lendi Application uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lendi_User_uuid__c</fullName>
        <label>Lendi User uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfAnnual_profit_income__c</fullName>
        <label>Annual Profit Income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfBusiness_Name_or_ABN_autofill__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDependant1_Age__c</fullName>
        <label>Dependant1 Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDependant2_Age__c</fullName>
        <label>Dependant2 Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDependant3_Age__c</fullName>
        <label>Dependant3 Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfEconsent_App2__c</fullName>
        <label>acfEconsent_App2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfEconsent__c</fullName>
        <label>Econsent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfEmployment_Type__c</fullName>
        <label>Employment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfLast_2_years_Tax_Return_or_ATO_NOA__c</fullName>
        <label>Last 2 years Tax Return or ATO NOA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfRecordid__c</fullName>
        <label>Recordid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfRelationship_code__c</fullName>
        <label>Relation ship code</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acf_ACf1_Current_employer_Start_Da__c</fullName>
        <label>Applicant ACf1 Current employer Start Da</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_How_Long__c</fullName>
        <label>How Long</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_How_Long_have_you_been_employed__c</fullName>
        <label>How Long have you been employe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_appl_ACf2_Current_employer_Start_Da__c</fullName>
        <label>ACf2 Current employer Start Da</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Annual_profit_income__c</fullName>
        <label>Annual profit / income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_App_1_Monthly_Expenses__c</fullName>
        <label>App 1 Monthly Expenses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_DOB__c</fullName>
        <label>DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Dependants__c</fullName>
        <label>Dependants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Monthlly_Salary__c</fullName>
        <label>Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acf_applicant_Residency_status__c</fullName>
        <label>Residency status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_create_from_custom_clone_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create from custom clone button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clickApp_1_Monthly_Expenses__c</fullName>
        <label>Monthly Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clickMarried_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Married To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>click_Applicant__c.click_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.click_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>click_Applicant__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clickOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>click_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>click_Applicant_Number__c</fullName>
        <label>Applicant Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acf_Applicant_Name__c</columns>
        <columns>acf_applicant_Marital_Status__c</columns>
        <columns>acf_applicant_DOB__c</columns>
        <columns>click_Applicant_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>click_Account__c</columns>
        <columns>clickOpportunity__c</columns>
        <columns>acfAnnual_profit_income__c</columns>
        <columns>acfEmployment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Applicant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <recordTypes>
        <fullName>Lendi</fullName>
        <active>true</active>
        <label>Lendi</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>